# CADDEE_alpha

./: README.md  pyproject.toml  release_notes.md  requirements.txt  setup.py  setup_old.py
.github/workflows/: actions.yml
CADDEE_alpha/: __init__.py
CADDEE_alpha/core/: caddee.py  component.py  condition.py  configuration.py  functions.py  vector.py
CADDEE_alpha/utils/: caddee_dict.py  coordinate_transformations.py  copy_comps.py  import_geometry.py  loading.py  materials.py  mesh_utils.py  struct_utils.py  units.py  var_groups.py
docs/: README.md  conf.py
docs/src/: api.md  background.md  concepts.md  examples.md  getting_started.md  tutorials.md  welcome.md
examples/advanced_examples/: ex_dynamic_inflow_and_acoustics.py  ex_lpc.py  ex_lpc_2.py  ex_lpc_materials.py  ex_pav.py  ex_pav_shell.py  ex_solvers.py  ex_solvers_sifr.py  ex_utils.py
examples/basic_examples/: ex_component_hierarchy.py  ex_configuration_wo_geometry.py  ex_lpc_geometry.py  ex_pav.py  ex_pav_shell.py  ex_solvers.py  ex_solvers_sifr.py  ex_solvers_sifr_coupled.py
examples/intermediate_examples/: ex_dynamic_inflow_and_acoustics.py  ex_handling_qualities_optimization.py  ex_induced_drag_minimization.py
examples/test_geometries/: caddee_test_wing.stp  caddee_test_wing_2.stp  caddee_test_wing_3.stp  pseudo_c172.vsp3  simple_wing.stp
stored_files/imports/: simple_wing_stored_import.pickle
stored_files/projections/: 0r8G7J.pickle  2cgpYC.pickle  4h3PD0.pickle  7RNgRP.pickle  A52KYU.pickle  Fv3mzf.pickle  G53Hoi.pickle  GBQn7f.pickle  GLVzxL.pickle  Llebn3.pickle  LsSkp2.pickle  MG0ZRO.pickle  MYU9nA.pickle  NAvd06.pickle  NO2tL8.pickle  Qg2AeU.pickle  R42GPq.pickle  SPSBQy.pickle  UEHK0H.pickle  VsEbq2.pickle  ZbCsbf.pickle  aaLtHI.pickle  cqvxh8.pickle  dDVkJz.pickle  dOi2ou.pickle  eWTjy4.pickle  fHGVeY.pickle  fna0br.pickle  iBpRL6.pickle  jg1u1W.pickle  kXlFPO.pickle  nlO0Uk.pickle  oASJWA.pickle  sSSVtU.pickle  utsAv0.pickle  zYLOVv.pickle
tests/: templates.py  test_attribute_setting.py  test_caddee_solver.py  test_conditions.py  test_ffd.py  test_meshes.py
(+52 files in other folders)
